# web-framework-compare

./: README.md  docker-compose.yaml
docker/db/: initdb.sql
docker/php/: Dockerfile
docker/python/: Dockerfile
docker/ruby/: Dockerfile
src/php/: .env
src/php/app/Http/Controllers/: SignController.php
src/php/resources/views/sign/: signin.blade.php
src/php/routes/: web.php
src/python/django/: makefile  pyproject.toml
src/python/django/app/: models.py  views.py
src/python/django/app/migrations/: 0001_initial.py  0002_alter_user_email.py
src/python/django/app/templates/sign/: signin.html
src/python/django/project/: settings.py  urls.py
src/python/starlette/: .env  .gitignore  main.py  makefile  pyproject.toml
src/python/starlette/app/controllers/: sign_in_controller.py
src/python/starlette/app/views/: signin.html
src/ruby/rails/: .gitignore
src/ruby/rails/app/views/layouts/: application.html.erb
src/ruby/rails/config/: application.rb  credentials.yml.enc  database.yml
src/ruby/rails/db/: schema.rb
