[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["itsumura-h <dumblepy@mail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
